--- a/MvcProje/Views/Category/AddCategory.cshtml
+++ b/MvcProje/Views/Category/AddCategory.cshtml
@@ -1,23 +1,20 @@
-﻿
-@model EntityLayer.Concrete.Category
+﻿@model EntityLayer.Concrete.Category
 
 @{
     Layout = null;
 }
 
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-
-<h1>Yeni Kategori Ekleme Sayfasi</h1>
+<h1>Yeni Kategori Ekleme Sayfası</h1>
 <br />
 @using (Html.BeginForm("AddCategory", "Category", FormMethod.Post))
 {
     <div class="form-group">
         @Html.Label("Kategori Adı")
-        @Html.TextBoxFor(x => x.CategoryName)
+        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control"})
         @Html.ValidationMessageFor(x => x.CategoryName)
         <br /><br />
         @Html.Label("Açıklamayı yazınız")
-        @Html.TextBoxFor(x => x.CategoryDescription)
+        @Html.TextBoxFor(x => x.CategoryDescription, new { @class = "form-control" })
         @Html.ValidationMessageFor(x => x.CategoryDescription)
         <br /><br />
         <button>Kaydet</button>
