--- a/MvcProje/Views/Message/GetInBoxMessageDetails.cshtml
+++ b/MvcProje/Views/Message/GetInBoxMessageDetails.cshtml
@@ -1,7 +1,7 @@
-﻿@model EntityLayer.Concrete.Contact
+﻿@model EntityLayer.Concrete.Message
 
 @{
-    ViewBag.Title = "GetContactDetails";
+    ViewBag.Title = "GetInBoxMessageDetails";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -20,7 +20,6 @@
     </section>
     <!-- Main content -->
     <section class="content">
-
         <div class="row">
             @Html.Action("PartialContact", "Contact")
             <!-- /.col -->
@@ -36,33 +35,15 @@
                     <!-- /.card-header -->
                     <div class="card-body p-0">
                         <div class="mailbox-read-info">
-                            <h5>Konu: @Html.DisplayFor(c => c.Subject)</h5>
+                            <h5>Konu: @Html.DisplayFor(m => m.Subject)</h5>
                             <h6>
-                                Mail: @Html.DisplayFor(c => c.UserEmail)
-                                <span class="mailbox-read-time float-right">@(((DateTime)Model.ContactDate).ToString("dd-MMM-yyyy"))</span>
+                                Mail: @Html.DisplayFor(m => m.SenderMail)
+                                <span class="mailbox-read-time float-right">@(((DateTime)Model.MessageDate).ToString("dd-MMM-yyyy"))</span>
                             </h6>
-                        </div>
-                        <!-- /.mailbox-read-info -->
-                        <div class="mailbox-controls with-border text-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Delete">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Reply">
-                                    <i class="fas fa-reply"></i>
-                                </button>
-                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Forward">
-                                    <i class="fas fa-share"></i>
-                                </button>
-                            </div>
-                            <!-- /.btn-group -->
-                            <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" title="Print">
-                                <i class="fas fa-print"></i>
-                            </button>
                         </div>
                         <!-- /.mailbox-controls -->
                         <div class="mailbox-read-message">
-                            <p>@Html.DisplayFor(c => c.Messages)</p>
+                            <p>@Html.DisplayFor(m => m.MessageContent)</p>
                         </div>
                         <!-- /.mailbox-read-message -->
                     </div>
