--- a/MvcProje/Views/Contact/PartialContact.cshtml
+++ b/MvcProje/Views/Contact/PartialContact.cshtml
@@ -30,8 +30,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/Draft/Draft/" class="nav-link">
                         <i class="far fa-file-alt"></i> Taslaklar
+                        <span class="badge bg-primary float-right">@ViewData["messageDraftCount"]</span>
                     </a>
                 </li>
                 <li class="nav-item">
