--- a/MvcProje/Views/Message/NewMessage.cshtml
+++ b/MvcProje/Views/Message/NewMessage.cshtml
@@ -58,6 +58,7 @@
                                     @Html.Label("Konu")
                                     @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
                                     @Html.ValidationMessageFor(x => x.Subject)
+
                                 </div>
                                 <div class="form-group">
                                     @Html.Label("Mesajınız")
@@ -74,10 +75,10 @@
                             <!-- /.card-body -->
                             <div class="card-footer">
                                 <div class="float-right">
-                                    <button type="button" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Taslaklara Kaydet</button>
-                                    <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
+                                    <button type="submit" name="button" value="draft" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Taslaklara Kaydet</button>
+                                    <button type="submit" formmethod="post" name="button" value="save" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
                                 </div>
-                                <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> İptal et</button>
+                                <a class="btn btn-default"><i class="fas fa-times"></i> İptal et</a>
                             </div>
                             <!-- /.card-footer -->
                         </div>
